<resources>
    <string name="app_name">MenuDemo</string>
    <string name="setting">Setting</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="search">Search</string>

    <array name="countryNames">

        <item>Bangladesh</item>
        <item>India</item>
        <item>Pakistan</item>
        <item>SriLenka</item>
        <item>Nepal</item>
        <item>Bhutan</item>
        <item>Maldive</item>
        <item>Myanmar</item>

    </array>
</resources>
